implement coockie authorization
